--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,8 @@ allprojects {
     apply plugin: 'eclipse'
 
     repositories {
-        jcenter()
-
+        mavenLocal()
+        maven { url "http://maven.aliyun.com/nexus/content/groups/public/"}
         // oss-candidate for -rc.* verions:
         maven {
             url "https://dl.bintray.com/netflixoss/oss-candidate"
